<resources>
    <string name="createdbybayram">Created By Bayram</string>
    <string name="app_name">FU</string>
    <string name="firat_univ">Fırat University</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to FU</string>
    <string name="nav_header_subtitle">International Relations Office</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="call">CALL</string>
    <string name="google_maps_key">AIzaSyDIhfQMP_w75_upu_rSDUUMzfNqu4kzydM</string>
    <string name="photos">Photos</string>
    <string name="about_FU">About FU</string>
    <string name="faculties">Faculties</string>
    <string name="emergency_number">Emergency</string>
    <string name="notifications">Notifications</string>
    <string name="menu_share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="if_you_have_any_prob">If you have any problems :)</string>
    <string name="fu_in_rakings">F.U. in rankings</string>
    <string name="fu_student_campus">F.U. Student Campus</string>
    <string name="student_story">Student\'s stories</string>
    <string name="eramus_at_fu">Erasmus+ at F.U.</string>
    <string name="downloads">Downloads</string>
    <string name="download">Download</string>
    <string name="desc">Description</string>
    <string name="has7">The faculty has 7 departments</string>
    <string name="has6">The faculty has 6 departments</string>
    <string name="has3">The faculty has 3 departments</string>
    <string name="has4">The faculty has 4 departments</string>
    <string name="has5">The faculty has 5 departments</string>
    <string name="has14">The faculty has 14 departments</string>
    <string name="has10">The faculty has 10 departments</string>
    <string name="faculty_education">Faculty of Education</string>
    <string name="faculty_science">Faculty of Science</string>
    <string name="faculty_humanity">Faculty of Humanity And Social Sciences</string>
    <string name="faculty_economic">Faculty of Economics And Administrative Sciences</string>
    <string name="faculty_theology">Faculty of Theology</string>
    <string name="faculty_communication">Faculty of Communication</string>
    <string name="faculty_engineering">Faculty of Engineering</string>
    <string name="faculty_health">Faculty of Health Science</string>
    <string name="faculty_fisher">Faculty of Fisheries</string>
    <string name="faculty_sport">Faculty of Sport Sciences</string>
    <string name="faculty_technology">Faculty of Technology</string>
    <string name="faculty_architecture">Faculty of Architecture</string>
    <string name="faculty_medicine">Faculty of Medicine</string>
    <string name="faculty_dentis">Faculty of Dentistry</string>
    <string name="faculty_veterinary">Faculty of Veterinary Medicine</string>
    <string name="ambulance">Ambulance</string>
    <string name="fire">Fire</string>
    <string name="police">Police</string>
    <string name="coastguard">CoastGuard</string>
    <string name="forest_fires">Forest Fires</string>
    <string name="missing_child">Missing Child-Womens helpline</string>
    <string-array name="emergency_list">
        <item>@string/ambulance</item>
        <item>@string/fire</item>
        <item>@string/police</item>
        <item>@string/coastguard</item>
        <item>@string/forest_fires</item>
        <item>@string/missing_child</item>

    </string-array>
    <string name="for_international_students">For International Students</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="aboutfulist">
        <item>@string/firat_univ</item>
        <item>@string/faculties</item>
        <item>@string/fu_in_rakings</item>
        <item>@string/fu_student_campus</item>
        <item>@string/student_story</item>
        <item>@string/eramus_at_fu</item>
        <item>@string/downloads</item>
    </string-array>
    <string-array name="faculiesname">
        <item>@string/faculty_education</item>
        <item>@string/faculty_science</item>
        <item>@string/faculty_humanity</item>
        <item>@string/faculty_economic</item>
        <item>@string/faculty_theology</item>
        <item>@string/faculty_communication</item>
        <item>@string/faculty_engineering</item>
        <item>@string/faculty_health</item>
        <item>@string/faculty_fisher</item>
        <item>@string/faculty_sport</item>
        <item>@string/faculty_technology</item>
        <item>@string/faculty_architecture</item>
        <item>@string/faculty_medicine</item>
        <item>@string/faculty_dentis</item>
        <item>@string/faculty_veterinary</item>
    </string-array>
    <string-array name="faculies_descpriction">
        <item>@string/has7</item>
        <item>@string/has6</item>
        <item>@string/has7</item>
        <item>@string/has7</item>
        <item>@string/has3</item>
        <item>@string/has4</item>
        <item>@string/has14</item>
        <item>@string/has4</item>
        <item></item>
        <item>@string/has3</item>
        <item>@string/has10</item>
        <item>@string/has5</item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string name="descp_firat_univ_1">
 <u> Fırat University also has 4 Graduate Schools, which are:</u>

        \n\n<li>1-)Graduate School of Science</li>
        \n<li>1-)Graduate School of Health Sciences</li>
        \n<li>2-)Graduate School of Social Sciences</li>
        \n<li>3-)Graduate School of Educational Sciences</li>
        \n\n
        <u>In terms of Post High School departments we can mention:</u>

        \n\n<li>1-)High School of Foreign Languages</li>
        \n<li>2-)Conservatory</li>
        \n<li>3-)Civil Aviation</li>
        \n\n
         <u>The Vocational High Schools of Firat University are:</u>
\n\n<li>1-)Baskil Vocational High School</li>
\n<li>2-)Maden Vocational High School</li>
\n<li>3-)Karakoçan Vocational High School</li>
\n<li>4-)Keban Vocational High School</li>
\n<li>5-)Kovancılar Vocational High School</li>
\n<li>6-)Health Services Vocational High School</li>
\n<li>7-)Sivrice Vocational High School</li>
\n<li>8-)Social Sciences Vocational High Sch</li>ool
\n<li>9-)Technic Sciences Vocational High School</li>
    </string>
    <string name="descp_firat_univ">1975-Present\n
        Fırat University, which has a deep-rooted history, started its educational services in Elazığ,
        a city with cultural richness. Then, it has become a Higher Education Institution that contributes
        significantly to the progress of higher education in the Eastern and Southeastern Anatolia Region
        \n
        Being at its basis an university with technical profile, Firat University is currently one of the best
        institution in Turkey in the field of technology and engineering.
        \n
        Initially, a High Technical School was opened in Elazığ in 1967, and in the same year, the decision of Ankara
        University that sets forth being established of the Faculty of Veterinary Science in Elazığ was approved by the
        Ministry of National Education.
        \n
        The High Technical School was transformed into the Elazığ State Engineering and Architectural
        Academy (ESEAA) with the law no. 1184 in 1969, and the Faculty of Veterinary Science started education in
        1970 being dependent on Ankara University.
        \n
    The higher education institutions in Elazığ were gathered under a single roof with the name of “Fırat University”
    on April 11th, 1975 and got into action within the frame of structure consisting the
    Faculty of Veterinary Science and the College of Science and the Faculty of Letters.
        At Fırat University reorganized with the Law of Higher Education no. 2547 and Statutory Decree no 41, the College
        of Science and the Faculty of Letters were combined and named as the Faculty of Science and Letters. The Elazığ State
        Engineering and Architectural Academy (ESEAA) were incorporated to the university by
        being turned into The Faculty of Engineering.

    </string>
    <string name="descp_faculty_education"><p>Faculty of Education started its activity in 1998 but its first independent building was opened in 2005-2006 followed by a second one in 2007-2008 and in the end in 2017-2018 academic year is moving to a new building where is continuing its educational activities.

According to the statistics, there are approximatively 1900 students, for all levels of instruction and a total of 82 academic staff. The staff of Faculty of Education is involved every year in new projects, attends conferences, symposiums, seminars and hosts scientific events recognized worldwide.

        According to a research conducted by Middle East Technical University (Ankara, Turkey) in 2015, Faculty of Education of Fırat University was evaluated as the 6th in Turkey and the 692nd in the world, in terms of academic services quality.</p>
    \n\n<u>Faculty of Education has 7 departments:</u>

        \n\n<li>Computer and Instructional Technologies</li>
\n<li>1-)Educational Sciences</li>
\n<li>2-)Fine Arts</li>
\n<li>3-)Elementary Education</li>
\n<li>4-)Science and Mathematics Teaching</li>
\n<li>5-)Secondary Education Social Science Teaching</li>
\n<li>6-)Turkish Teaching</li></string>
    <string name="descp_faculty_science"><p>Faculty of Science was established in April 1975. The first departments to be opened were Biology, Physics, Physics Engineering, Statistics, Chemistry, Chemical Engineering, Geology Engineering and Mathematics.

        In the base of a law promulgated in 1982, Faculty of Science became Faculty of Sciences and Letters. The department of Physic Engineering was closed and the departments of Chemical Engineering and Geology Engineering became part of the Faculty of Engineering. The actual name of the establishment is Faculty of Science.</p>
        \n \n <u>Faculty of Science has 6 departments:</u>

\n<li>1-)Biology</li>
\n<li>2-)Physics</li>
\n<li>3-)Chemistry</li>
\n<li>4-)Mathematics</li>
\n<li>5-)Statistics</li>
\n<li>6-)Actuarial Sciences</li>
</string>
    <string name="todo">todo</string>
    <string name="title_activity_emergency">Emergency Number</string>
    <string name="title_activity_emergency_word">Emergency Word</string>
    <string name="ranking_title_1">
      <b>  A.  The Best Global Universities</b>
    </string>
    <string name="ranking_descp_1">
      On the Best Global Universities ranking list published by US News \ World Report,
        F.U has been placed 400th globally and 6th nationally in subject of engineering
        showing a greatly positive success rate. (January 2016)
    </string>
    <string name="ranking_title_2">
      <b> B.   Top 2000 Universities - The Center for World University Rankings (CWUR)</b>
    </string>
    <string name="ranking_descp_2">
      F.U has been rated as 1405 World rank and 30 National
        Rank in the The Center for World University Rankings 2019-2020.
    </string>
    <string name="ranking_links">Link will be write here from java array</string>
    <string name="ranking_title_3">
      <b> C. Shanghai Ranking Consultancy </b>
    </string>
    <string name="ranking_descp_3">
      In 2019 Shanghai Ranking Consultancy announced Academic
        Ranking of World Universities 2019. Firat University, is once again part of the best universities.\n\n
        ShanghaiRanking Consultancy Internet Page:
    </string>
</resources>